# cc-history-api

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  patterns.jsonl
.planning/audit/: b1.2-audit-2026-05-09T1006-asia-shanghai.md  b1.2-backfill-execution-2026-05-09T0956-asia-shanghai.md  b1.2-triage-2026-05-09T1011-asia-shanghai.md  c1-attachments-backfill-procedure-summary-2026-05-10T0712-asia-shanghai.md  c1.1-audit-2026-05-09T1059-asia-shanghai.md  c1.1-triage-2026-05-09T1105-asia-shanghai.md  c1.2-audit-2026-05-09T1151-asia-shanghai.md  c1.2-triage-2026-05-09T1157-asia-shanghai.md  c1.3-audit-2026-05-09T1334-asia-shanghai.md  c1.3-triage-2026-05-09T1340-asia-shanghai.md  c1.4-audit-2026-05-09T1401-asia-shanghai.md  c1.4-triage-2026-05-09T1408-asia-shanghai.md  c2.1-audit-2026-05-09T1430-asia-shanghai.md  c2.1-triage-2026-05-09T1433-asia-shanghai.md  c2.3-audit-2026-05-09T1455-asia-shanghai.md  c2.3-triage-2026-05-09T1501-asia-shanghai.md  c2.4-audit-2026-05-09T1527-asia-shanghai.md  c2.4-triage-2026-05-09T1531-asia-shanghai.md  c2.5-audit-2026-05-09T1544-asia-shanghai.md  c2.5-triage-2026-05-09T1547-asia-shanghai.md  c2.6-audit-2026-05-09T1603-asia-shanghai.md  c2.6-triage-2026-05-09T1607-asia-shanghai.md  contentblock-inner-discriminator-explanation-2026-05-10T0615-asia-shanghai.md  d4-audit-2026-05-09T0853-asia-shanghai.md  d4-triage-2026-05-09T0859-asia-shanghai.md  jsonl-unknown-record-type-attachment-investigation-2026-05-08T0551-asia-shanghai.md  madeleine-prior-art.md  milestone-2-spec.md  phase-01-refactor.md  phase-02-refactor.md  phase-03-refactor.md  phase-04-refactor.md  phase-05-refactor.md  plan-content-promotion-atomic-steps-2026-05-05T0632-asia-shanghai.md  schema-drift-modeling-recommendations-2026-05-04T1016-asia-shanghai.md
.planning/design/: work-patterns.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-core-types-and-ingestion-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-01-execution-results.json  01-02-PLAN.md  01-02-SUMMARY.md  01-02-execution-results.json  01-03-PLAN.md  01-03-SUMMARY.md  01-03-execution-results.json  01-04-PLAN.md  01-04-SUMMARY.md  01-04-execution-results.json  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-full-text-search-and-cli/: 02-01-PLAN.md  02-01-SUMMARY.md  02-01-execution-results.json  02-02-PLAN.md  02-02-SUMMARY.md  02-02-execution-results.json  02-03-PLAN.md  02-03-SUMMARY.md  02-03-execution-results.json  02-RESEARCH.md  plan-breakdown.json
.planning/phases/03-http-api-and-daemon/: 03-01-PLAN.md  03-01-SUMMARY.md  03-01-execution-results.json  03-02-PLAN.md  03-02-SUMMARY.md  03-02-execution-results.json  03-03-PLAN.md  03-03-SUMMARY.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/templates/: adversarial-audit-template.md  deviation-triage-template.md  subagent-prompt-template.md
crates/core/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: daemon_client.rs  events.rs  export.rs  main.rs  output.rs  serve.rs  state.rs  watcher.rs
crates/server/src/api/: analytics.rs  artifacts_api.rs  attachments.rs  error.rs  export_api.rs  files.rs  git.rs  health.rs  hook_executions.rs  messages.rs  mod.rs  plans.rs  projects.rs  schema.rs  search.rs  sessions.rs  sql.rs
crates/server/src/mcp/: mod.rs  tools.rs
crates/store/: Cargo.toml
crates/store/migrations/: 001_initial.sql  002_fts5.sql  003_artifacts.sql  004_modeling.sql  005_drop_noise.sql  006_version_monitoring.sql  007_record_type_drift.sql  008_attachments.sql  009_attachment_fts.sql  010_plan_content.sql  011_plan_content_fts.sql
crates/store/src/: artifact_queries.rs  artifacts.rs  bookmarks.rs  db.rs  decompose.rs  drift.rs  fts.rs  lib.rs  query.rs  query_registry.rs  schema.rs  sql_passthrough.rs  sync.rs
mcpb/: manifest.json
queries/: message-search-context.sql  message-search-context.toml  recent-sessions.sql  recent-sessions.toml  tool-usage-by-session.sql  tool-usage-by-session.toml
scripts/: check_versions.py  release.py  sync_manifest_tools.py
(+58 files in other folders)
