[workspace]
resolver = "2"
members = ["crates/core", "crates/store", "crates/server"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
