[workspace]
resolver = "2"
members = ["crates/core", "crates/store", "crates/server"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
notify = { version = "8.2", features = ["macos_fsevent"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
similar = "2.7"
glob = "0.3"
regex = "1"
toml = "0.8"
