[package]
name = "claude-history"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-history"
path = "src/main.rs"

[dependencies]
claude-history-core = { path = "../core" }
claude-history-store = { path = "../store" }
tokio = { workspace = true }
tokio-rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
