[package]
name = "claude-history-store"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-history-core = { path = "../core" }
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
